# myrabbit

./: .gitignore  Makefile  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  testin.py
myrabbit/core/consumer/: channel.py  message_handler.py  pika_message.py
myrabbit/core/publisher/: basic_publisher.py  publisher.py  rpc.py
myrabbit/events/: __init__.py  event_bus.py  event_bus_adapter.py  event_with_message.py
myrabbit/events/event_adapter/: dataclass.py
myrabbit/events/serializer/: __init__.py  serializer.py
src/myrabbit/: __init__.py  run_services.py  runner.py  service.py  service_builder.py
src/myrabbit/commands/: __init__.py  command_bus.py  command_bus_adapter.py  command_outcome.py  command_with_message.py  reply_headers.py
src/myrabbit/contrib/opentelemetry/: instrumentor.py
src/myrabbit/core/consumer/: __init__.py  basic_consumer.py  callbacks.py  channel.py  consumer.py  handle_message_strategy.py  listener.py  message_handler.py  pika_message.py  reconnecting_consumer.py  reply.py
src/myrabbit/core/converter/: __init__.py  converter.py  dataclass.py  pydantic.py
src/myrabbit/core/publisher/: __init__.py  publisher.py  reconnecting_publisher.py  rpc.py
src/myrabbit/core/serializer/: json_serializer.py  serializer.py
src/myrabbit/events/: __init__.py  event_bus.py  event_bus_adapter.py  event_with_message.py
src/myrabbit/events/event_adapter/: __init__.py  dataclass.py  event_adapter.py  pydantic.py
src/myrabbit/service/: __init__.py  doc.py  runner.py  service.py  service_builder.py
src/myrabbit/utils/: functions.py
tests/: conftest.py  logging.py  test_commands.py  test_consumer.py  test_events.py  test_instrumentation.py  test_listener.py  test_method_names.py  test_publisher.py  test_run_services.py  test_service.py  test_service_builder.py  test_throughput.py
(+5 files in other folders)
