[tool.poetry]
name = "myrabbit"
version = "0.1.0"
description = "Python library for microservice messaging via RabbitMq"
authors = ['asyncee']

[tool.poetry.dependencies]
python = "^3.7"
pika = "^1.1"
pydantic = "^1.4"
inflection = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
