[tool.poetry]
name = "myrabbit"
version = "0.1.2"
description = "Python library for microservice messaging via RabbitMq"
authors = ['asyncee']
packages = [
    { include = "myrabbit", from="src" },
]

[tool.poetry.dependencies]
python = "^3.7"
pika = "^1.1"
pydantic = "^1.4"
orjson = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
requests = "^2.23.0"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
mypy = "^0.770"
mypy-extensions = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
